--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ click==8.0.0
 colorama==0.4.4
 Flask==2.0.0
 flask-apispec==0.11.0
+gunicorn==20.1.0
 flask-swagger-ui==3.36.0
 Flask-WTF==0.14.3
 greenlet==1.1.0
